# xdg-utils.nu

./: .cade  .editorconfig  .gitignore  .rustfmt.toml  LICENSE  README.md  flake.nix
nix/: package.nix
plugins/: Cargo.toml
plugins/nu_plugin_dbus/: Cargo.toml
plugins/nu_plugin_dbus/src/: client.rs  config.rs  convert.rs  dbus_type.rs  introspection.rs  main.rs  pattern.rs
plugins/nu_plugin_dbus/src/commands/: call.rs  get.rs  get_all.rs  introspect.rs  list.rs  main.rs  set.rs
plugins/nu_plugin_xdg/: Cargo.toml
plugins/nu_plugin_xdg/src/: engine_env.rs  main.rs
plugins/nu_plugin_xdg/src/commands/: desktop_expand_exec.rs  desktop_find.rs  desktop_parse.rs  main.rs  mime_list_handlers.rs  mime_query_default.rs  mime_query_filetype.rs  mime_set_default.rs  mod.rs
plugins/xdg-core/: Cargo.toml
plugins/xdg-core/src/: desktop_entry.rs  diagnostic.rs  exec.rs  glob.rs  keyfile.rs  lib.rs  magic.rs  mime.rs  xdg_dirs.rs
scripts/: xdg-copy.nu  xdg-desktop-icon.nu  xdg-desktop-menu.nu  xdg-email.nu  xdg-file-dialog.nu  xdg-icon-resource.nu  xdg-mime.nu  xdg-open.nu  xdg-realpath.nu  xdg-screensaver.nu  xdg-settings.nu  xdg-su.nu  xdg-terminal.nu  xdg-utils-common.nu
