[package]
name                   = "xdg-core"
description            = "Library for XDG Desktop primitives"
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
version.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories             = [ "os::unix-apis", "parsing" ]
repository             = "https://github.com/manic-systems/xdg-utils.nu"
readme                 = "../../README.md"

[lints]
workspace = true
